extend notes